cs21b062lab10/y.output
Nonterminals useless in grammar

    ElseStmt


Terminals unused in grammar

    ELSE
    CONTINUE


Rules useless in grammar

   55 ElseStmt: ELSE LCURL StatementList RCURL
   56         | ε


State 13 conflicts: 10 shift/reduce
State 33 conflicts: 10 shift/reduce
State 99 conflicts: 10 shift/reduce
State 100 conflicts: 10 shift/reduce
State 107 conflicts: 10 shift/reduce


Grammar

    0 $accept: StatementList $end

    1 StatementList: Statement SEMICOLON StatementList
    2              | IfStatement StatementList

    3 $@1: ε

    4 $@2: ε

    5 $@3: ε

    6 StatementList: WHILE LPAREN ComRelExp RPAREN LCURL begin dummyLabels $@1 StatementList RCURL $@2 $@3 StatementList
    7              | SwitchStatement
    8              | ε

    9 $@4: ε

   10 $@5: ε

   11 SwitchStatement: SWITCH LPAREN CaseVal $@4 RPAREN LCURL CaseStatements RCURL $@5 StatementList

   12 $@6: ε

   13 $@7: ε

   14 CaseStatements: CASE CaseVal COLON dummyLabels $@6 StatementList BreakStmt $@7 CaseStatements
   15               | DEFAULT COLON StatementList
   16               | ε

   17 BreakStmt: BREAK SEMICOLON

   18 $@8: ε

   19 $@9: ε

   20 IfStatement: IF LPAREN ComRelExp RPAREN LCURL $@8 dummyLabels StatementList RCURL $@9 StatementList

   21 dummyLabels: ε

   22 begin: ε

   23 Statement: IDENTIFIER EQ Statement
   24          | Term

   25 ComRelExp: ComRelExp AND Relexp
   26          | ComRelExp OR Relexp
   27          | Relexp

   28 Relexp: Term LT Term
   29       | Term LTE Term
   30       | Term GT Term
   31       | Term GTE Term
   32       | Term EQ EQ Term
   33       | Term NOT EQ Term
   34       | LPAREN Relexp RPAREN
   35       | NOT Relexp
   36       | ε

   37 Term: Term ADD Factor
   38     | Term SUB Factor
   39     | Factor

   40 Factor: Factor MUL SIGNVal
   41       | Factor DIV SIGNVal
   42       | SIGNVal

   43 SIGNVal: ADD Val
   44        | SUB Val
   45        | Val

   46 CaseVal: IDENTIFIER
   47        | NUMBER

   48 Val: IDENTIFIER
   49    | NUMBER
   50    | PADD IDENTIFIER
   51    | PSUB IDENTIFIER
   52    | IDENTIFIER PADD
   53    | IDENTIFIER PSUB
   54    | LPAREN Term RPAREN


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    IF (258) 20
    ELSE (259)
    ADD (260) 37 43
    SUB (261) 38 44
    MUL (262) 40
    DIV (263) 41
    EQ (264) 23 32 33
    LT (265) 28
    LTE (266) 29
    GT (267) 30
    GTE (268) 31
    NOT (269) 33 35
    AND (270) 25
    OR (271) 26
    PADD (272) 50 52
    PSUB (273) 51 53
    LPAREN (274) 6 11 20 34 54
    RPAREN (275) 6 11 20 34 54
    LCURL (276) 6 11 20
    RCURL (277) 6 11 20
    SEMICOLON (278) 1 17
    WHILE (279) 6
    COLON (280) 14 15
    SWITCH (281) 11
    BREAK (282) 17
    CONTINUE (283)
    DEFAULT (284) 15
    CASE (285) 14
    NUMBER <dval> (286) 47 49
    IDENTIFIER <addr> (287) 23 46 48 50 51 52 53


Nonterminals, with rules where they appear

    $accept (33)
        on left: 0
    StatementList <addr> (34)
        on left: 1 2 6 7 8
        on right: 0 1 2 6 11 14 15 20
    $@1 (35)
        on left: 3
        on right: 6
    $@2 (36)
        on left: 4
        on right: 6
    $@3 (37)
        on left: 5
        on right: 6
    SwitchStatement <addr> (38)
        on left: 11
        on right: 7
    $@4 (39)
        on left: 9
        on right: 11
    $@5 (40)
        on left: 10
        on right: 11
    CaseStatements <addr> (41)
        on left: 14 15 16
        on right: 11 14
    $@6 (42)
        on left: 12
        on right: 14
    $@7 (43)
        on left: 13
        on right: 14
    BreakStmt <addr> (44)
        on left: 17
        on right: 14
    IfStatement <addr> (45)
        on left: 20
        on right: 2
    $@8 (46)
        on left: 18
        on right: 20
    $@9 (47)
        on left: 19
        on right: 20
    dummyLabels <lab> (48)
        on left: 21
        on right: 6 14 20
    begin <lab> (49)
        on left: 22
        on right: 6
    Statement <addr> (50)
        on left: 23 24
        on right: 1 23
    ComRelExp <addr> (51)
        on left: 25 26 27
        on right: 6 20 25 26
    Relexp <addr> (52)
        on left: 28 29 30 31 32 33 34 35 36
        on right: 25 26 27 34 35
    Term <addr> (53)
        on left: 37 38 39
        on right: 24 28 29 30 31 32 33 37 38 54
    Factor <addr> (54)
        on left: 40 41 42
        on right: 37 38 39 40 41
    SIGNVal <addr> (55)
        on left: 43 44 45
        on right: 40 41 42
    CaseVal <addCase> (56)
        on left: 46 47
        on right: 11 14
    Val <addr> (57)
        on left: 48 49 50 51 52 53 54
        on right: 43 44 45


State 0

    0 $accept: • StatementList $end

    IF          shift, and go to state 1
    ADD         shift, and go to state 2
    SUB         shift, and go to state 3
    PADD        shift, and go to state 4
    PSUB        shift, and go to state 5
    LPAREN      shift, and go to state 6
    WHILE       shift, and go to state 7
    SWITCH      shift, and go to state 8
    NUMBER      shift, and go to state 9
    IDENTIFIER  shift, and go to state 10

    $default  reduce using rule 8 (StatementList)

    StatementList    go to state 11
    SwitchStatement  go to state 12
    IfStatement      go to state 13
    Statement        go to state 14
    Term             go to state 15
    Factor           go to state 16
    SIGNVal          go to state 17
    Val              go to state 18


State 1

   20 IfStatement: IF • LPAREN ComRelExp RPAREN LCURL $@8 dummyLabels StatementList RCURL $@9 StatementList

    LPAREN  shift, and go to state 19


State 2

   43 SIGNVal: ADD • Val

    PADD        shift, and go to state 4
    PSUB        shift, and go to state 5
    LPAREN      shift, and go to state 6
    NUMBER      shift, and go to state 9
    IDENTIFIER  shift, and go to state 20

    Val  go to state 21


State 3

   44 SIGNVal: SUB • Val

    PADD        shift, and go to state 4
    PSUB        shift, and go to state 5
    LPAREN      shift, and go to state 6
    NUMBER      shift, and go to state 9
    IDENTIFIER  shift, and go to state 20

    Val  go to state 22


State 4

   50 Val: PADD • IDENTIFIER

    IDENTIFIER  shift, and go to state 23


State 5

   51 Val: PSUB • IDENTIFIER

    IDENTIFIER  shift, and go to state 24


State 6

   54 Val: LPAREN • Term RPAREN

    ADD         shift, and go to state 2
    SUB         shift, and go to state 3
    PADD        shift, and go to state 4
    PSUB        shift, and go to state 5
    LPAREN      shift, and go to state 6
    NUMBER      shift, and go to state 9
    IDENTIFIER  shift, and go to state 20

    Term     go to state 25
    Factor   go to state 16
    SIGNVal  go to state 17
    Val      go to state 18


State 7

    6 StatementList: WHILE • LPAREN ComRelExp RPAREN LCURL begin dummyLabels $@1 StatementList RCURL $@2 $@3 StatementList

    LPAREN  shift, and go to state 26


State 8

   11 SwitchStatement: SWITCH • LPAREN CaseVal $@4 RPAREN LCURL CaseStatements RCURL $@5 StatementList

    LPAREN  shift, and go to state 27


State 9

   49 Val: NUMBER •

    $default  reduce using rule 49 (Val)


State 10

   23 Statement: IDENTIFIER • EQ Statement
   48 Val: IDENTIFIER •
   52    | IDENTIFIER • PADD
   53    | IDENTIFIER • PSUB

    EQ    shift, and go to state 28
    PADD  shift, and go to state 29
    PSUB  shift, and go to state 30

    $default  reduce using rule 48 (Val)


State 11

    0 $accept: StatementList • $end

    $end  shift, and go to state 31


State 12

    7 StatementList: SwitchStatement •

    $default  reduce using rule 7 (StatementList)


State 13

    2 StatementList: IfStatement • StatementList

    IF          shift, and go to state 1
    ADD         shift, and go to state 2
    SUB         shift, and go to state 3
    PADD        shift, and go to state 4
    PSUB        shift, and go to state 5
    LPAREN      shift, and go to state 6
    WHILE       shift, and go to state 7
    SWITCH      shift, and go to state 8
    NUMBER      shift, and go to state 9
    IDENTIFIER  shift, and go to state 10

    IF          [reduce using rule 8 (StatementList)]
    ADD         [reduce using rule 8 (StatementList)]
    SUB         [reduce using rule 8 (StatementList)]
    PADD        [reduce using rule 8 (StatementList)]
    PSUB        [reduce using rule 8 (StatementList)]
    LPAREN      [reduce using rule 8 (StatementList)]
    WHILE       [reduce using rule 8 (StatementList)]
    SWITCH      [reduce using rule 8 (StatementList)]
    NUMBER      [reduce using rule 8 (StatementList)]
    IDENTIFIER  [reduce using rule 8 (StatementList)]
    $default    reduce using rule 8 (StatementList)

    StatementList    go to state 32
    SwitchStatement  go to state 12
    IfStatement      go to state 13
    Statement        go to state 14
    Term             go to state 15
    Factor           go to state 16
    SIGNVal          go to state 17
    Val              go to state 18


State 14

    1 StatementList: Statement • SEMICOLON StatementList

    SEMICOLON  shift, and go to state 33


State 15

   24 Statement: Term •
   37 Term: Term • ADD Factor
   38     | Term • SUB Factor

    ADD  shift, and go to state 34
    SUB  shift, and go to state 35

    $default  reduce using rule 24 (Statement)


State 16

   39 Term: Factor •
   40 Factor: Factor • MUL SIGNVal
   41       | Factor • DIV SIGNVal

    MUL  shift, and go to state 36
    DIV  shift, and go to state 37

    $default  reduce using rule 39 (Term)


State 17

   42 Factor: SIGNVal •

    $default  reduce using rule 42 (Factor)


State 18

   45 SIGNVal: Val •

    $default  reduce using rule 45 (SIGNVal)


State 19

   20 IfStatement: IF LPAREN • ComRelExp RPAREN LCURL $@8 dummyLabels StatementList RCURL $@9 StatementList

    ADD         shift, and go to state 2
    SUB         shift, and go to state 3
    NOT         shift, and go to state 38
    PADD        shift, and go to state 4
    PSUB        shift, and go to state 5
    LPAREN      shift, and go to state 39
    NUMBER      shift, and go to state 9
    IDENTIFIER  shift, and go to state 20

    $default  reduce using rule 36 (Relexp)

    ComRelExp  go to state 40
    Relexp     go to state 41
    Term       go to state 42
    Factor     go to state 16
    SIGNVal    go to state 17
    Val        go to state 18


State 20

   48 Val: IDENTIFIER •
   52    | IDENTIFIER • PADD
   53    | IDENTIFIER • PSUB

    PADD  shift, and go to state 29
    PSUB  shift, and go to state 30

    $default  reduce using rule 48 (Val)


State 21

   43 SIGNVal: ADD Val •

    $default  reduce using rule 43 (SIGNVal)


State 22

   44 SIGNVal: SUB Val •

    $default  reduce using rule 44 (SIGNVal)


State 23

   50 Val: PADD IDENTIFIER •

    $default  reduce using rule 50 (Val)


State 24

   51 Val: PSUB IDENTIFIER •

    $default  reduce using rule 51 (Val)


State 25

   37 Term: Term • ADD Factor
   38     | Term • SUB Factor
   54 Val: LPAREN Term • RPAREN

    ADD     shift, and go to state 34
    SUB     shift, and go to state 35
    RPAREN  shift, and go to state 43


State 26

    6 StatementList: WHILE LPAREN • ComRelExp RPAREN LCURL begin dummyLabels $@1 StatementList RCURL $@2 $@3 StatementList

    ADD         shift, and go to state 2
    SUB         shift, and go to state 3
    NOT         shift, and go to state 38
    PADD        shift, and go to state 4
    PSUB        shift, and go to state 5
    LPAREN      shift, and go to state 39
    NUMBER      shift, and go to state 9
    IDENTIFIER  shift, and go to state 20

    $default  reduce using rule 36 (Relexp)

    ComRelExp  go to state 44
    Relexp     go to state 41
    Term       go to state 42
    Factor     go to state 16
    SIGNVal    go to state 17
    Val        go to state 18


State 27

   11 SwitchStatement: SWITCH LPAREN • CaseVal $@4 RPAREN LCURL CaseStatements RCURL $@5 StatementList

    NUMBER      shift, and go to state 45
    IDENTIFIER  shift, and go to state 46

    CaseVal  go to state 47


State 28

   23 Statement: IDENTIFIER EQ • Statement

    ADD         shift, and go to state 2
    SUB         shift, and go to state 3
    PADD        shift, and go to state 4
    PSUB        shift, and go to state 5
    LPAREN      shift, and go to state 6
    NUMBER      shift, and go to state 9
    IDENTIFIER  shift, and go to state 10

    Statement  go to state 48
    Term       go to state 15
    Factor     go to state 16
    SIGNVal    go to state 17
    Val        go to state 18


State 29

   52 Val: IDENTIFIER PADD •

    $default  reduce using rule 52 (Val)


State 30

   53 Val: IDENTIFIER PSUB •

    $default  reduce using rule 53 (Val)


State 31

    0 $accept: StatementList $end •

    $default  accept


State 32

    2 StatementList: IfStatement StatementList •

    $default  reduce using rule 2 (StatementList)


State 33

    1 StatementList: Statement SEMICOLON • StatementList

    IF          shift, and go to state 1
    ADD         shift, and go to state 2
    SUB         shift, and go to state 3
    PADD        shift, and go to state 4
    PSUB        shift, and go to state 5
    LPAREN      shift, and go to state 6
    WHILE       shift, and go to state 7
    SWITCH      shift, and go to state 8
    NUMBER      shift, and go to state 9
    IDENTIFIER  shift, and go to state 10

    IF          [reduce using rule 8 (StatementList)]
    ADD         [reduce using rule 8 (StatementList)]
    SUB         [reduce using rule 8 (StatementList)]
    PADD        [reduce using rule 8 (StatementList)]
    PSUB        [reduce using rule 8 (StatementList)]
    LPAREN      [reduce using rule 8 (StatementList)]
    WHILE       [reduce using rule 8 (StatementList)]
    SWITCH      [reduce using rule 8 (StatementList)]
    NUMBER      [reduce using rule 8 (StatementList)]
    IDENTIFIER  [reduce using rule 8 (StatementList)]
    $default    reduce using rule 8 (StatementList)

    StatementList    go to state 49
    SwitchStatement  go to state 12
    IfStatement      go to state 13
    Statement        go to state 14
    Term             go to state 15
    Factor           go to state 16
    SIGNVal          go to state 17
    Val              go to state 18


State 34

   37 Term: Term ADD • Factor

    ADD         shift, and go to state 2
    SUB         shift, and go to state 3
    PADD        shift, and go to state 4
    PSUB        shift, and go to state 5
    LPAREN      shift, and go to state 6
    NUMBER      shift, and go to state 9
    IDENTIFIER  shift, and go to state 20

    Factor   go to state 50
    SIGNVal  go to state 17
    Val      go to state 18


State 35

   38 Term: Term SUB • Factor

    ADD         shift, and go to state 2
    SUB         shift, and go to state 3
    PADD        shift, and go to state 4
    PSUB        shift, and go to state 5
    LPAREN      shift, and go to state 6
    NUMBER      shift, and go to state 9
    IDENTIFIER  shift, and go to state 20

    Factor   go to state 51
    SIGNVal  go to state 17
    Val      go to state 18


State 36

   40 Factor: Factor MUL • SIGNVal

    ADD         shift, and go to state 2
    SUB         shift, and go to state 3
    PADD        shift, and go to state 4
    PSUB        shift, and go to state 5
    LPAREN      shift, and go to state 6
    NUMBER      shift, and go to state 9
    IDENTIFIER  shift, and go to state 20

    SIGNVal  go to state 52
    Val      go to state 18


State 37

   41 Factor: Factor DIV • SIGNVal

    ADD         shift, and go to state 2
    SUB         shift, and go to state 3
    PADD        shift, and go to state 4
    PSUB        shift, and go to state 5
    LPAREN      shift, and go to state 6
    NUMBER      shift, and go to state 9
    IDENTIFIER  shift, and go to state 20

    SIGNVal  go to state 53
    Val      go to state 18


State 38

   35 Relexp: NOT • Relexp

    ADD         shift, and go to state 2
    SUB         shift, and go to state 3
    NOT         shift, and go to state 38
    PADD        shift, and go to state 4
    PSUB        shift, and go to state 5
    LPAREN      shift, and go to state 39
    NUMBER      shift, and go to state 9
    IDENTIFIER  shift, and go to state 20

    $default  reduce using rule 36 (Relexp)

    Relexp   go to state 54
    Term     go to state 42
    Factor   go to state 16
    SIGNVal  go to state 17
    Val      go to state 18


State 39

   34 Relexp: LPAREN • Relexp RPAREN
   54 Val: LPAREN • Term RPAREN

    ADD         shift, and go to state 2
    SUB         shift, and go to state 3
    NOT         shift, and go to state 38
    PADD        shift, and go to state 4
    PSUB        shift, and go to state 5
    LPAREN      shift, and go to state 39
    NUMBER      shift, and go to state 9
    IDENTIFIER  shift, and go to state 20

    $default  reduce using rule 36 (Relexp)

    Relexp   go to state 55
    Term     go to state 56
    Factor   go to state 16
    SIGNVal  go to state 17
    Val      go to state 18


State 40

   20 IfStatement: IF LPAREN ComRelExp • RPAREN LCURL $@8 dummyLabels StatementList RCURL $@9 StatementList
   25 ComRelExp: ComRelExp • AND Relexp
   26          | ComRelExp • OR Relexp

    AND     shift, and go to state 57
    OR      shift, and go to state 58
    RPAREN  shift, and go to state 59


State 41

   27 ComRelExp: Relexp •

    $default  reduce using rule 27 (ComRelExp)


State 42

   28 Relexp: Term • LT Term
   29       | Term • LTE Term
   30       | Term • GT Term
   31       | Term • GTE Term
   32       | Term • EQ EQ Term
   33       | Term • NOT EQ Term
   37 Term: Term • ADD Factor
   38     | Term • SUB Factor

    ADD  shift, and go to state 34
    SUB  shift, and go to state 35
    EQ   shift, and go to state 60
    LT   shift, and go to state 61
    LTE  shift, and go to state 62
    GT   shift, and go to state 63
    GTE  shift, and go to state 64
    NOT  shift, and go to state 65


State 43

   54 Val: LPAREN Term RPAREN •

    $default  reduce using rule 54 (Val)


State 44

    6 StatementList: WHILE LPAREN ComRelExp • RPAREN LCURL begin dummyLabels $@1 StatementList RCURL $@2 $@3 StatementList
   25 ComRelExp: ComRelExp • AND Relexp
   26          | ComRelExp • OR Relexp

    AND     shift, and go to state 57
    OR      shift, and go to state 58
    RPAREN  shift, and go to state 66


State 45

   47 CaseVal: NUMBER •

    $default  reduce using rule 47 (CaseVal)


State 46

   46 CaseVal: IDENTIFIER •

    $default  reduce using rule 46 (CaseVal)


State 47

   11 SwitchStatement: SWITCH LPAREN CaseVal • $@4 RPAREN LCURL CaseStatements RCURL $@5 StatementList

    $default  reduce using rule 9 ($@4)

    $@4  go to state 67


State 48

   23 Statement: IDENTIFIER EQ Statement •

    $default  reduce using rule 23 (Statement)


State 49

    1 StatementList: Statement SEMICOLON StatementList •

    $default  reduce using rule 1 (StatementList)


State 50

   37 Term: Term ADD Factor •
   40 Factor: Factor • MUL SIGNVal
   41       | Factor • DIV SIGNVal

    MUL  shift, and go to state 36
    DIV  shift, and go to state 37

    $default  reduce using rule 37 (Term)


State 51

   38 Term: Term SUB Factor •
   40 Factor: Factor • MUL SIGNVal
   41       | Factor • DIV SIGNVal

    MUL  shift, and go to state 36
    DIV  shift, and go to state 37

    $default  reduce using rule 38 (Term)


State 52

   40 Factor: Factor MUL SIGNVal •

    $default  reduce using rule 40 (Factor)


State 53

   41 Factor: Factor DIV SIGNVal •

    $default  reduce using rule 41 (Factor)


State 54

   35 Relexp: NOT Relexp •

    $default  reduce using rule 35 (Relexp)


State 55

   34 Relexp: LPAREN Relexp • RPAREN

    RPAREN  shift, and go to state 68


State 56

   28 Relexp: Term • LT Term
   29       | Term • LTE Term
   30       | Term • GT Term
   31       | Term • GTE Term
   32       | Term • EQ EQ Term
   33       | Term • NOT EQ Term
   37 Term: Term • ADD Factor
   38     | Term • SUB Factor
   54 Val: LPAREN Term • RPAREN

    ADD     shift, and go to state 34
    SUB     shift, and go to state 35
    EQ      shift, and go to state 60
    LT      shift, and go to state 61
    LTE     shift, and go to state 62
    GT      shift, and go to state 63
    GTE     shift, and go to state 64
    NOT     shift, and go to state 65
    RPAREN  shift, and go to state 43


State 57

   25 ComRelExp: ComRelExp AND • Relexp

    ADD         shift, and go to state 2
    SUB         shift, and go to state 3
    NOT         shift, and go to state 38
    PADD        shift, and go to state 4
    PSUB        shift, and go to state 5
    LPAREN      shift, and go to state 39
    NUMBER      shift, and go to state 9
    IDENTIFIER  shift, and go to state 20

    $default  reduce using rule 36 (Relexp)

    Relexp   go to state 69
    Term     go to state 42
    Factor   go to state 16
    SIGNVal  go to state 17
    Val      go to state 18


State 58

   26 ComRelExp: ComRelExp OR • Relexp

    ADD         shift, and go to state 2
    SUB         shift, and go to state 3
    NOT         shift, and go to state 38
    PADD        shift, and go to state 4
    PSUB        shift, and go to state 5
    LPAREN      shift, and go to state 39
    NUMBER      shift, and go to state 9
    IDENTIFIER  shift, and go to state 20

    $default  reduce using rule 36 (Relexp)

    Relexp   go to state 70
    Term     go to state 42
    Factor   go to state 16
    SIGNVal  go to state 17
    Val      go to state 18


State 59

   20 IfStatement: IF LPAREN ComRelExp RPAREN • LCURL $@8 dummyLabels StatementList RCURL $@9 StatementList

    LCURL  shift, and go to state 71


State 60

   32 Relexp: Term EQ • EQ Term

    EQ  shift, and go to state 72


State 61

   28 Relexp: Term LT • Term

    ADD         shift, and go to state 2
    SUB         shift, and go to state 3
    PADD        shift, and go to state 4
    PSUB        shift, and go to state 5
    LPAREN      shift, and go to state 6
    NUMBER      shift, and go to state 9
    IDENTIFIER  shift, and go to state 20

    Term     go to state 73
    Factor   go to state 16
    SIGNVal  go to state 17
    Val      go to state 18


State 62

   29 Relexp: Term LTE • Term

    ADD         shift, and go to state 2
    SUB         shift, and go to state 3
    PADD        shift, and go to state 4
    PSUB        shift, and go to state 5
    LPAREN      shift, and go to state 6
    NUMBER      shift, and go to state 9
    IDENTIFIER  shift, and go to state 20

    Term     go to state 74
    Factor   go to state 16
    SIGNVal  go to state 17
    Val      go to state 18


State 63

   30 Relexp: Term GT • Term

    ADD         shift, and go to state 2
    SUB         shift, and go to state 3
    PADD        shift, and go to state 4
    PSUB        shift, and go to state 5
    LPAREN      shift, and go to state 6
    NUMBER      shift, and go to state 9
    IDENTIFIER  shift, and go to state 20

    Term     go to state 75
    Factor   go to state 16
    SIGNVal  go to state 17
    Val      go to state 18


State 64

   31 Relexp: Term GTE • Term

    ADD         shift, and go to state 2
    SUB         shift, and go to state 3
    PADD        shift, and go to state 4
    PSUB        shift, and go to state 5
    LPAREN      shift, and go to state 6
    NUMBER      shift, and go to state 9
    IDENTIFIER  shift, and go to state 20

    Term     go to state 76
    Factor   go to state 16
    SIGNVal  go to state 17
    Val      go to state 18


State 65

   33 Relexp: Term NOT • EQ Term

    EQ  shift, and go to state 77


State 66

    6 StatementList: WHILE LPAREN ComRelExp RPAREN • LCURL begin dummyLabels $@1 StatementList RCURL $@2 $@3 StatementList

    LCURL  shift, and go to state 78


State 67

   11 SwitchStatement: SWITCH LPAREN CaseVal $@4 • RPAREN LCURL CaseStatements RCURL $@5 StatementList

    RPAREN  shift, and go to state 79


State 68

   34 Relexp: LPAREN Relexp RPAREN •

    $default  reduce using rule 34 (Relexp)


State 69

   25 ComRelExp: ComRelExp AND Relexp •

    $default  reduce using rule 25 (ComRelExp)


State 70

   26 ComRelExp: ComRelExp OR Relexp •

    $default  reduce using rule 26 (ComRelExp)


State 71

   20 IfStatement: IF LPAREN ComRelExp RPAREN LCURL • $@8 dummyLabels StatementList RCURL $@9 StatementList

    $default  reduce using rule 18 ($@8)

    $@8  go to state 80


State 72

   32 Relexp: Term EQ EQ • Term

    ADD         shift, and go to state 2
    SUB         shift, and go to state 3
    PADD        shift, and go to state 4
    PSUB        shift, and go to state 5
    LPAREN      shift, and go to state 6
    NUMBER      shift, and go to state 9
    IDENTIFIER  shift, and go to state 20

    Term     go to state 81
    Factor   go to state 16
    SIGNVal  go to state 17
    Val      go to state 18


State 73

   28 Relexp: Term LT Term •
   37 Term: Term • ADD Factor
   38     | Term • SUB Factor

    ADD  shift, and go to state 34
    SUB  shift, and go to state 35

    $default  reduce using rule 28 (Relexp)


State 74

   29 Relexp: Term LTE Term •
   37 Term: Term • ADD Factor
   38     | Term • SUB Factor

    ADD  shift, and go to state 34
    SUB  shift, and go to state 35

    $default  reduce using rule 29 (Relexp)


State 75

   30 Relexp: Term GT Term •
   37 Term: Term • ADD Factor
   38     | Term • SUB Factor

    ADD  shift, and go to state 34
    SUB  shift, and go to state 35

    $default  reduce using rule 30 (Relexp)


State 76

   31 Relexp: Term GTE Term •
   37 Term: Term • ADD Factor
   38     | Term • SUB Factor

    ADD  shift, and go to state 34
    SUB  shift, and go to state 35

    $default  reduce using rule 31 (Relexp)


State 77

   33 Relexp: Term NOT EQ • Term

    ADD         shift, and go to state 2
    SUB         shift, and go to state 3
    PADD        shift, and go to state 4
    PSUB        shift, and go to state 5
    LPAREN      shift, and go to state 6
    NUMBER      shift, and go to state 9
    IDENTIFIER  shift, and go to state 20

    Term     go to state 82
    Factor   go to state 16
    SIGNVal  go to state 17
    Val      go to state 18


State 78

    6 StatementList: WHILE LPAREN ComRelExp RPAREN LCURL • begin dummyLabels $@1 StatementList RCURL $@2 $@3 StatementList

    $default  reduce using rule 22 (begin)

    begin  go to state 83


State 79

   11 SwitchStatement: SWITCH LPAREN CaseVal $@4 RPAREN • LCURL CaseStatements RCURL $@5 StatementList

    LCURL  shift, and go to state 84


State 80

   20 IfStatement: IF LPAREN ComRelExp RPAREN LCURL $@8 • dummyLabels StatementList RCURL $@9 StatementList

    $default  reduce using rule 21 (dummyLabels)

    dummyLabels  go to state 85


State 81

   32 Relexp: Term EQ EQ Term •
   37 Term: Term • ADD Factor
   38     | Term • SUB Factor

    ADD  shift, and go to state 34
    SUB  shift, and go to state 35

    $default  reduce using rule 32 (Relexp)


State 82

   33 Relexp: Term NOT EQ Term •
   37 Term: Term • ADD Factor
   38     | Term • SUB Factor

    ADD  shift, and go to state 34
    SUB  shift, and go to state 35

    $default  reduce using rule 33 (Relexp)


State 83

    6 StatementList: WHILE LPAREN ComRelExp RPAREN LCURL begin • dummyLabels $@1 StatementList RCURL $@2 $@3 StatementList

    $default  reduce using rule 21 (dummyLabels)

    dummyLabels  go to state 86


State 84

   11 SwitchStatement: SWITCH LPAREN CaseVal $@4 RPAREN LCURL • CaseStatements RCURL $@5 StatementList

    DEFAULT  shift, and go to state 87
    CASE     shift, and go to state 88

    $default  reduce using rule 16 (CaseStatements)

    CaseStatements  go to state 89


State 85

   20 IfStatement: IF LPAREN ComRelExp RPAREN LCURL $@8 dummyLabels • StatementList RCURL $@9 StatementList

    IF          shift, and go to state 1
    ADD         shift, and go to state 2
    SUB         shift, and go to state 3
    PADD        shift, and go to state 4
    PSUB        shift, and go to state 5
    LPAREN      shift, and go to state 6
    WHILE       shift, and go to state 7
    SWITCH      shift, and go to state 8
    NUMBER      shift, and go to state 9
    IDENTIFIER  shift, and go to state 10

    $default  reduce using rule 8 (StatementList)

    StatementList    go to state 90
    SwitchStatement  go to state 12
    IfStatement      go to state 13
    Statement        go to state 14
    Term             go to state 15
    Factor           go to state 16
    SIGNVal          go to state 17
    Val              go to state 18


State 86

    6 StatementList: WHILE LPAREN ComRelExp RPAREN LCURL begin dummyLabels • $@1 StatementList RCURL $@2 $@3 StatementList

    $default  reduce using rule 3 ($@1)

    $@1  go to state 91


State 87

   15 CaseStatements: DEFAULT • COLON StatementList

    COLON  shift, and go to state 92


State 88

   14 CaseStatements: CASE • CaseVal COLON dummyLabels $@6 StatementList BreakStmt $@7 CaseStatements

    NUMBER      shift, and go to state 45
    IDENTIFIER  shift, and go to state 46

    CaseVal  go to state 93


State 89

   11 SwitchStatement: SWITCH LPAREN CaseVal $@4 RPAREN LCURL CaseStatements • RCURL $@5 StatementList

    RCURL  shift, and go to state 94


State 90

   20 IfStatement: IF LPAREN ComRelExp RPAREN LCURL $@8 dummyLabels StatementList • RCURL $@9 StatementList

    RCURL  shift, and go to state 95


State 91

    6 StatementList: WHILE LPAREN ComRelExp RPAREN LCURL begin dummyLabels $@1 • StatementList RCURL $@2 $@3 StatementList

    IF          shift, and go to state 1
    ADD         shift, and go to state 2
    SUB         shift, and go to state 3
    PADD        shift, and go to state 4
    PSUB        shift, and go to state 5
    LPAREN      shift, and go to state 6
    WHILE       shift, and go to state 7
    SWITCH      shift, and go to state 8
    NUMBER      shift, and go to state 9
    IDENTIFIER  shift, and go to state 10

    $default  reduce using rule 8 (StatementList)

    StatementList    go to state 96
    SwitchStatement  go to state 12
    IfStatement      go to state 13
    Statement        go to state 14
    Term             go to state 15
    Factor           go to state 16
    SIGNVal          go to state 17
    Val              go to state 18


State 92

   15 CaseStatements: DEFAULT COLON • StatementList

    IF          shift, and go to state 1
    ADD         shift, and go to state 2
    SUB         shift, and go to state 3
    PADD        shift, and go to state 4
    PSUB        shift, and go to state 5
    LPAREN      shift, and go to state 6
    WHILE       shift, and go to state 7
    SWITCH      shift, and go to state 8
    NUMBER      shift, and go to state 9
    IDENTIFIER  shift, and go to state 10

    $default  reduce using rule 8 (StatementList)

    StatementList    go to state 97
    SwitchStatement  go to state 12
    IfStatement      go to state 13
    Statement        go to state 14
    Term             go to state 15
    Factor           go to state 16
    SIGNVal          go to state 17
    Val              go to state 18


State 93

   14 CaseStatements: CASE CaseVal • COLON dummyLabels $@6 StatementList BreakStmt $@7 CaseStatements

    COLON  shift, and go to state 98


State 94

   11 SwitchStatement: SWITCH LPAREN CaseVal $@4 RPAREN LCURL CaseStatements RCURL • $@5 StatementList

    $default  reduce using rule 10 ($@5)

    $@5  go to state 99


State 95

   20 IfStatement: IF LPAREN ComRelExp RPAREN LCURL $@8 dummyLabels StatementList RCURL • $@9 StatementList

    $default  reduce using rule 19 ($@9)

    $@9  go to state 100


State 96

    6 StatementList: WHILE LPAREN ComRelExp RPAREN LCURL begin dummyLabels $@1 StatementList • RCURL $@2 $@3 StatementList

    RCURL  shift, and go to state 101


State 97

   15 CaseStatements: DEFAULT COLON StatementList •

    $default  reduce using rule 15 (CaseStatements)


State 98

   14 CaseStatements: CASE CaseVal COLON • dummyLabels $@6 StatementList BreakStmt $@7 CaseStatements

    $default  reduce using rule 21 (dummyLabels)

    dummyLabels  go to state 102


State 99

   11 SwitchStatement: SWITCH LPAREN CaseVal $@4 RPAREN LCURL CaseStatements RCURL $@5 • StatementList

    IF          shift, and go to state 1
    ADD         shift, and go to state 2
    SUB         shift, and go to state 3
    PADD        shift, and go to state 4
    PSUB        shift, and go to state 5
    LPAREN      shift, and go to state 6
    WHILE       shift, and go to state 7
    SWITCH      shift, and go to state 8
    NUMBER      shift, and go to state 9
    IDENTIFIER  shift, and go to state 10

    IF          [reduce using rule 8 (StatementList)]
    ADD         [reduce using rule 8 (StatementList)]
    SUB         [reduce using rule 8 (StatementList)]
    PADD        [reduce using rule 8 (StatementList)]
    PSUB        [reduce using rule 8 (StatementList)]
    LPAREN      [reduce using rule 8 (StatementList)]
    WHILE       [reduce using rule 8 (StatementList)]
    SWITCH      [reduce using rule 8 (StatementList)]
    NUMBER      [reduce using rule 8 (StatementList)]
    IDENTIFIER  [reduce using rule 8 (StatementList)]
    $default    reduce using rule 8 (StatementList)
